removed nickname too long bug

--- a/public/css/popout.css
+++ b/public/css/popout.css
@@ -181,7 +181,7 @@
 
 .menu-content {
 	position: relative;
-	width: 30vw;
+	width: auto;
 	height: 100vh;
 	overflow: hidden;
 	transition: width 0.7s;
@@ -201,6 +201,8 @@
 	top: 1em;
 	padding-right: 25px;
 	margin-right: 10px;
+	max-height: 20vh;
+	overflow-y: hidden;
 }
 
 @-moz-document url-prefix() {
